--- a/freewifiClient/AndroidManifest.xml
+++ b/freewifiClient/AndroidManifest.xml
@@ -4,9 +4,19 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="17"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:name=".MainApplication"
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
+        android:theme="@android:style/Theme.Light.NoTitleBar"
+        android:allowBackup="true">
+        <!-- 这里替换百度地图的AK -->
+        <meta-data android:name="com.baidu.lbsapi.API_KEY"
+            android:value="SqFYEiMjW3oV4rfoHic0kh59" />
+        <!-- 百度定位：在application标签中声明service组件,每个app拥有自己单独的定位service -->
+        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"></service>
+
         <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+              android:label="@string/app_name">
         </activity>
         <activity android:name=".MainListActivity">
             <intent-filter>
@@ -14,7 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name=".web.MyWebView" />
+        <activity android:name=".geo.BDLocating" />
+
         <activity android:name=".wxapi.WXEntryActivity" android:exported="true"/>
         <activity android:name=".test.WXLogin"/>
         <activity android:name=".test.WifiActivity"/>
@@ -27,5 +40,16 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <!-- 百度定位所需权限 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission><!-- 这个权限用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission><!-- 这个权限用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission><!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission><!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission><!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission><!-- 用于读取手机当前的状态-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission><!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
+    <uses-permission android:name="android.permission.INTERNET" /><!-- 访问网络，网络定位需要上网-->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission><!-- SD卡读取权限，用户写入离线定位数据 -->
+    <uses-permission android:name="android.permission.READ_LOGS"></uses-permission><!--允许应用读取低级别的系统日志文件 -->
 
 </manifest>
