--- a/freewifiClient/AndroidManifest.xml
+++ b/freewifiClient/AndroidManifest.xml
@@ -25,8 +25,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".web.MyWebView" />
+        <activity android:name=".test.MyWebView" />
+        <activity android:name=".web.WebViewInteractJS" />
         <activity android:name=".geo.BDLocating" />
+        <activity android:name=".test.JsonTestAty" />
 
         <activity android:name=".wxapi.WXEntryActivity" android:exported="true"/>
         <activity android:name=".test.WXLogin"/>
@@ -51,5 +53,7 @@
     <uses-permission android:name="android.permission.INTERNET" /><!-- 访问网络，网络定位需要上网-->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission><!-- SD卡读取权限，用户写入离线定位数据 -->
     <uses-permission android:name="android.permission.READ_LOGS"></uses-permission><!--允许应用读取低级别的系统日志文件 -->
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 
 </manifest>
