--- a/server/pom.xml
+++ b/server/pom.xml
@@ -148,12 +148,8 @@
 		</dependency>
 
 		<!-- Database -->
-		<!-- <dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
-			<scope>runtime</scope>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.hsqldb</groupId> <artifactId>hsqldb</artifactId> 
+			<version>1.8.0.10</version> <scope>runtime</scope> </dependency> -->
 
 		<!-- Servlet -->
 		<dependency>
@@ -174,18 +170,10 @@
 			<version>1.2</version>
 		</dependency>
 		<!-- Apache Tiles -->
-		<!-- <dependency>
-			<groupId>org.apache.tiles</groupId>
-			<artifactId>tiles-jsp</artifactId>
-			<version>2.2.2</version>
-			<exclusions>
-				Exclude Commons Logging in favor of SLF4j
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging-api</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.apache.tiles</groupId> <artifactId>tiles-jsp</artifactId> 
+			<version>2.2.2</version> <exclusions> Exclude Commons Logging in favor of 
+			SLF4j <exclusion> <groupId>commons-logging</groupId> <artifactId>commons-logging-api</artifactId> 
+			</exclusion> </exclusions> </dependency> -->
 
 		<!-- Hibernate JPA 2 Provider -->
 		<dependency>
@@ -193,7 +181,17 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>3.6.0.Final</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>junit</artifactId>
+					<groupId>junit</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<!-- JSR 303 with Hibernate Validator -->
 		<dependency>
 			<groupId>javax.validation</groupId>
