--- a/freewifiClient/AndroidManifest.xml
+++ b/freewifiClient/AndroidManifest.xml
@@ -44,6 +44,7 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
+    <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
 
     <application android:name=".MainApplication"
                  android:label="@string/app_name"
