--- a/freewifiClient/AndroidManifest.xml
+++ b/freewifiClient/AndroidManifest.xml
@@ -13,6 +13,13 @@
     <!-- wifi 所需的权限 -->
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
 
+    <!-- 微信分享所需權限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <!-- 百度定位所需权限 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <!-- 这个权限用于进行网络定位-->
@@ -57,9 +64,7 @@
         <!-- 百度定位：在application标签中声明service组件,每个app拥有自己单独的定位service -->
         <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"></service>
 
-        <activity android:name="MainActivity"
-                  android:label="@string/app_name">
-        </activity>
+        <activity android:name="MainActivity" android:label="@string/app_name"></activity>
         <activity android:name=".MainListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -71,13 +76,13 @@
         <activity android:name=".web.WebViewInteractJS"/>
         <activity android:name=".geo.BDLocating"/>
         <activity android:name=".test.JsonTestAty"/>
-
-        <activity android:name=".wxapi.WXEntryActivity" android:exported="true"/>
         <activity android:name=".test.WXLogin"/>
         <activity android:name=".test.WifiActivity"/>
         <activity android:name=".push.PushAty"/>
         <activity android:name=".push.MsgShowAty"/>
-
+        <activity android:name=".wxapi.WXEntryActivity"
+            android:exported="true"
+            android:launchMode="singleTop" />
 
         <!-- JPush Required SDK核心功能-->
         <activity
@@ -96,7 +101,6 @@
                 android:enabled="true"
                 android:exported="false">
         </service>
-
 
         <!-- Required SDK 核心功能-->
         <service
