--- a/freewifiClient/AndroidManifest.xml
+++ b/freewifiClient/AndroidManifest.xml
@@ -81,15 +81,19 @@
 
         <activity android:name="MainActivity" android:label="@string/app_name"></activity>
         <activity android:name=".MainListActivity">
+        </activity>
+
+        <activity android:name=".test.MyWebView"/>
+        <activity android:name=".web.UserInfoWeb"
+            android:launchMode="singleTop">
+        </activity>
+        <activity android:name=".web.LoginWeb"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".test.MyWebView"/>
-        <activity android:name=".web.UserInfoWeb"/>
-        <activity android:name=".web.LoginWeb"/>
         <activity android:name=".geo.BDLocating"/>
         <activity android:name=".test.JsonTestAty"/>
         <activity android:name=".test.WXLogin"/>
