--- a/server/pom.xml
+++ b/server/pom.xml
@@ -237,6 +237,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
